[package]
name = "velox_bundler"
version = "0.1.0"
authors = ["dev-sinpy <tdevyanshu9@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ar = "0.3"
cab = "0.1"
chrono = "0.4"
dirs = "1.0"
error-chain = "0.12"
glob = "0.2"
icns = "^0.2"
image = "0.12"
libflate = "0.1"
md5 = "0.3"
msi = "0.2"
serde = "1.0"
serde_derive = "1.0"
strsim = "0.7"
tar = "0.4"
target_build_utils = "0.3"
term = "0.4"
toml = "0.4"
uuid = { version = "0.5", features = ["v5"] }
walkdir = "2"